css/style.css
body {
    margin: 0;
    font-family: 'Oswald', sans-serif;
}

/* HEADER */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: orange;
    align-items: center;
    width: 100%;
    height: 100px;
}

.logo-container {
    display: flex;
    align-items: center;
    margin-left: 40px;
}

.navbar {
    display: flex;
    align-items: center;
    height: 100%;
    margin-right: 40px;
}

.navbar li {
    margin: 0 15px;
    font-size: 20px;
    list-style: none;
    padding: 0;
}

.navbar a {
    text-decoration: none;
    color: black;
}
.navbar a:hover {
    color: white;
}
/* HEADER ENDS */

.hero-img-container {
    position: relative;
    padding-top: 3px;
    object-position: top;
    height : 500px;
    overflow: hidden;
}

.hero-img-container img {
    width: 100%;
    height: auto;
}
.hero-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: black;
    font-size: 40px;
    font-weight: bold;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
    background-color: white;
    padding: 15px;
    border-radius: 5px;
}
/* HERO IMAGE ENDS */
/* EVERYDAY CATEGORIES */

.everyday-categories-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width : 100%;
    background-color: white;
}

.everyday-categories-container h2 {
    font-size: 28px;
    margin: 0 40px 10px 40px;
    font-size: 30px;
}

.everyday-categories-container p {
    margin: 0 40px 10px 40px;
    font-size: 18px;
    color: rgb(0, 0, 0)
}

.category-images {
    display: flex;
    justify-content: center;
    gap: 20px;
}

.category-images img {
    flex: 1;
    width: 400px;
    object-fit: cover;
    border-radius: 5px;
}

.category-labels {
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 1200px;
    margin:  0 40px;
}

.category-labels span {
    font-size: 20px;
    color: rgb(0, 0, 0);
}

/* EVERYDAY CATEGORIES ENDS */

.healthy-recipes-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: rgb(171, 182, 192);
    width: 100%;
}
.healthy-recipes-container h2 {
    margin: 0 80px 10px 80px;
    font-size: 30px;
}

.healthy-recipes-container p {
    margin: 0 80px;
    font-size: 18px;
}

